--- a/web/css/light.css
+++ b/web/css/light.css
@@ -1,4 +1,8 @@
-body { background: #ebebeb url('../img/light.png'); }
+body { font-family:"Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif; background: #ebebeb url('../img/light.png'); }
+.announcement { color: #777; border-bottom: solid 3px #d0d0d0; background-color: #fff; padding: 10px 10px; text-align: center; transition: 0.3s; }
+.announcement:hover { border-bottom: solid 3px #159e83; transition: 0.3s; }
+.announcement p { display: inline-block;font-size: 15px;margin: 0;line-height: 1;text-indent: 5px; }
+.announcement i { display: inline-block;font-size: 15px;margin: 0;line-height: 1;color: #444; }
 .navbar { min-height: 40px; }
 .navbar-brand { color: #fff; padding: 10px; font-size: 20px; }
 .dropdown .dropdown-toggle { padding-bottom: 10px; padding-top: 10px; }
@@ -14,39 +18,33 @@ body { background: #ebebeb url('../img/light.png'); }
 tr.even.expandRow > :hover { background: #F9F9F9 !important; }
 tr.odd.expandRow > :hover { background: #FFF !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
-#cpu, #ram, #hdd, #network, #traffic { min-width: 55px; max-width: 100px; }
+#cpu, #ram, #hdd, #network { min-width: 55px; max-width: 100px; }
 
 @media only screen and (max-width: 992px) {
-	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
-	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
-	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
-	#network, tr td:nth-child(9)		{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#network, tr td:nth-child(8)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
 	#name, tr td:nth-child(3)			{ min-width: 10px; max-width: 25px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#network, tr td:nth-child(8)		{ display:none; visibility:hidden; }
-	#hdd, tr td:nth-child(8)			{ display:none; visibility:hidden; }
-	#cpu, #ram							{ min-width: 25px; max-width: 50px; }
+	#cpu, #ram, #hdd { min-width: 25px; max-width: 50px; }
 }
