--- a/web/css/light.css
+++ b/web/css/light.css
@@ -26,25 +26,29 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 @media only screen and (max-width: 720px) {
 	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+    #uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
 	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(7)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
 	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#network, tr td:nth-child(8)		{ display:none; visibility:hidden; }
+	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
-	#name, tr td:nth-child(3)			{ min-width: 10px; max-width: 25px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+    #status4, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#name, tr td:nth-child(3)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#network, tr td:nth-child(8)		{ display:none; visibility:hidden; }
-	#cpu, #ram, #hdd { min-width: 25px; max-width: 50px; }
+	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(12)			{ display:none; visibility:hidden; }
+	#cpu, #ram{ min-width: 25px; max-width: 50px; }
 }
