--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -3,7 +3,7 @@ body { font-family:"Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei",
 .announcement:hover { border-bottom: solid 3px #145A32; transition: 0.3s; }
 .announcement p { display: inline-block;font-size: 15px;margin: 0;line-height: 1;text-indent: 5px; }
 .announcement i { display: inline-block;font-size: 15px;margin: 0;line-height: 1;color: #000; }
-.navbar { min-height: 50px; }
+.navbar { min-height: 40px; }
 .navbar-top { background-color: #4a4a4a !important; border-bottom: 6px solid #145A32; }
 .navbar-brand { color: #FFF !important; padding: 10px; font-size: 20px; }
 .dropdown .dropdown-toggle { padding-bottom: 10px; padding-top: 10px; }
@@ -11,8 +11,7 @@ body { font-family:"Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei",
 .dropdown-menu > li > a:hover { color: #FFF !important; background: #000 !important; }
 .dropdown-menu { background: #222 !important; background-color: #222222 !important; }
 .navbar-inverse .navbar-inner { background-color:#1B1B1B; background-image:-moz-linear-gradient(top, #222222, #111111); background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111)); background-image:-webkit-linear-gradient(top, #222222, #111111); background-image:-o-linear-gradient(top, #222222, #111111); background-image:linear-gradient(to bottom, #222222, #111111); background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0); border-color: #252525; }
-.content { background: #222; padding: 20px; border-radius: 5px; border: 1px #000 solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; }
-.table { background: #000; margin-bottom: 0; border-collapse: collapse; border-radius: 3px; }
+.content { background: #222; padding: 20px; border: 1px #000 solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }
 .table th { text-align: center; }
 .table-striped tbody > tr.even > td, .table-striped tbody > tr.even > th { background-color: #2F2F2F; }
 .table-striped tbody > tr.odd > td, .table-striped tbody > tr.odd > th { background-color: #000; }
@@ -25,34 +24,39 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 #cpu, #ram, #hdd 						{ min-width: 55px; }
 
 @media only screen and (max-width: 992px) {
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-    #uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(7)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
-    #status4, tr td:nth-child(2)		{ display:none; visibility:hidden; }
-	#name, tr td:nth-child(3)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
-    #hdd, tr td:nth-child(12)			{ display:none; visibility:hidden; }
-	#cpu, #ram{ min-width: 25px; max-width: 50px; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(14)			{ display:none; visibility:hidden; }
+	#cpu, #ram							{ min-width: 25px; max-width: 50px; }
 }
