--- a/web/css/light.css
+++ b/web/css/light.css
@@ -8,8 +8,7 @@ body { font-family:"Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei",
 .navbar-brand { color: #fff; padding: 10px; font-size: 20px; }
 .dropdown .dropdown-toggle { padding-bottom: 10px; padding-top: 10px; }
 .navbar-inverse .navbar-brand { color: #fff; padding: 10px; font-size: 20px; }
-.content { background: #ffffff; padding: 20px; border-radius: 5px; border: 1px #cecece solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; }
-.table { background: #ffffff; margin-bottom: 0; border-collapse: collapse; border-radius: 3px; }
+.content { background: #ffffff; padding: 20px; border: 1px #cecece solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }.table { background: #ffffff; margin-bottom: 0; border-collapse: collapse; border-radius: 3px; }
 .table th, .table td { text-align: center; }
 .table-striped tbody > tr.even > td, .table-striped tbody > tr.even > th { background-color: #F9F9F9; }
 .table-striped tbody > tr.odd > td, .table-striped tbody > tr.odd > th { background-color: #FFF; }
@@ -22,34 +21,39 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 #cpu, #ram, #hdd 						{ min-width: 55px; }
 
 @media only screen and (max-width: 992px) {
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-    #uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(7)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
-    #status4, tr td:nth-child(2)		{ display:none; visibility:hidden; }
-	#name, tr td:nth-child(3)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
-	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(9)		{ display:none; visibility:hidden; }
-    #hdd, tr td:nth-child(12)			{ display:none; visibility:hidden; }
-	#cpu, #ram{ min-width: 25px; max-width: 50px; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(14)			{ display:none; visibility:hidden; }
+	#cpu, #ram							{ min-width: 25px; max-width: 50px; }
 }
