--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -1,4 +1,4 @@
-body { font-family:"Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif; background: #222 url('../img/dark.png'); color: #fff; }
+body { font-family:"Roboto", sans-serif; background: #222 url('../img/dark.png'); color: #fff; }
 .announcement { color: #ffffff; border-bottom: solid 3px #424949; background-color: #17202A; padding: 10px 10px; text-align: center; transition: 0.3s; }
 .announcement:hover { border-bottom: solid 3px #145A32; transition: 0.3s; }
 .announcement p { display: inline-block;font-size: 15px;margin: 0;line-height: 1;text-indent: 5px; }
@@ -30,7 +30,7 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-    #uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
@@ -38,6 +38,7 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
@@ -45,6 +46,7 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
@@ -56,6 +58,8 @@ tr.odd.expandRow > :hover { background: #000 !important; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 	#traffic, tr td:nth-child(11)		{ display:none; visibility:hidden; }
     #hdd, tr td:nth-child(14)			{ display:none; visibility:hidden; }
 	#cpu, #ram							{ min-width: 25px; max-width: 50px; }
