--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -21,7 +21,7 @@ body { font-family:"Roboto", sans-serif; background: #222 url('../img/dark.png')
 tr.even.expandRow > :hover { background: #2F2F2F !important; }
 tr.odd.expandRow > :hover { background: #000 !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
-#cpu, #ram, #hdd 						{ min-width: 55px; }
+#cpu, #memory, #hdd 						{ min-width: 50px; }
 
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
@@ -60,5 +60,5 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-	#cpu, #ram, #hdd					{ min-width: 25px; max-width: 50px; }
+	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
