--- a/web/css/light.css
+++ b/web/css/light.css
@@ -18,7 +18,7 @@ body { font-family:"Roboto", sans-serif; background: #ebebeb url('../img/light.p
 tr.even.expandRow > :hover { background: #F9F9F9 !important; }
 tr.odd.expandRow > :hover { background: #FFF !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
-#cpu, #ram, #hdd 						{ min-width: 55px; }
+#cpu, #memory, #hdd 						{ min-width: 50px; }
 
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
@@ -57,5 +57,5 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-	#cpu, #ram, #hdd					{ min-width: 25px; max-width: 50px; }
+	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
