--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -1,5 +1,5 @@
 body { font-family:"Roboto", sans-serif; background: #222 url('../img/dark.png'); color: #fff; }
-.announcement { color: #ffffff; border-bottom: solid 3px #424949; background-color: #17202A; padding: 10px 10px; text-align: center; transition: 0.3s; }
+.announcement { color: #ffffff; border-bottom: solid 3px #424949; background-color: #17202A; padding: 10px 10px; text-align: center; transition: 0.3s; width:90%; }
 .announcement:hover { border-bottom: solid 3px #145A32; transition: 0.3s; }
 .announcement p { display: inline-block;font-size: 15px;margin: 0;line-height: 1;text-indent: 5px; }
 .announcement i { display: inline-block;font-size: 15px;margin: 0;line-height: 1;color: #000; }
@@ -11,7 +11,7 @@ body { font-family:"Roboto", sans-serif; background: #222 url('../img/dark.png')
 .dropdown-menu > li > a:hover { color: #FFF !important; background: #000 !important; }
 .dropdown-menu { background: #222 !important; background-color: #222222 !important; }
 .navbar-inverse .navbar-inner { background-color:#1B1B1B; background-image:-moz-linear-gradient(top, #222222, #111111); background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111)); background-image:-webkit-linear-gradient(top, #222222, #111111); background-image:-o-linear-gradient(top, #222222, #111111); background-image:linear-gradient(to bottom, #222222, #111111); background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0); border-color: #252525; }
-.content { background: #222; padding: 20px; border: 1px #000 solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }
+.content { width:90%; background: #222; padding: 20px; border: 1px #000 solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }
 .table th { text-align: center; }
 .table-striped tbody > tr.even > td, .table-striped tbody > tr.even > th { background-color: #2F2F2F; }
 .table-striped tbody > tr.odd > td, .table-striped tbody > tr.odd > th { background-color: #000; }
@@ -25,33 +25,41 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
     #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
@@ -60,5 +68,6 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
 	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
