--- a/web/css/light.css
+++ b/web/css/light.css
@@ -1,5 +1,5 @@
 body { font-family:"Roboto", sans-serif; background: #ebebeb url('../img/light.png'); }
-.announcement { color: #777; border-bottom: solid 3px #d0d0d0; background-color: #fff; padding: 10px 10px; text-align: center; transition: 0.3s; }
+.announcement { color: #777; border-bottom: solid 3px #d0d0d0; background-color: #fff; padding: 10px 10px; text-align: center; transition: 0.3s; width:90%; }
 .announcement:hover { border-bottom: solid 3px #159e83; transition: 0.3s; }
 .announcement p { display: inline-block;font-size: 15px;margin: 0;line-height: 1;text-indent: 5px; }
 .announcement i { display: inline-block;font-size: 15px;margin: 0;line-height: 1;color: #444; }
@@ -8,7 +8,7 @@ body { font-family:"Roboto", sans-serif; background: #ebebeb url('../img/light.p
 .navbar-brand { color: #fff; padding: 10px; font-size: 20px; }
 .dropdown .dropdown-toggle { padding-bottom: 10px; padding-top: 10px; }
 .navbar-inverse .navbar-brand { color: #fff; padding: 10px; font-size: 20px; }
-.content { background: #ffffff; padding: 20px; border: 1px #cecece solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }.table { background: #ffffff; margin-bottom: 0; border-collapse: collapse; border-radius: 3px; }
+.content { width:90%; background: #ffffff; padding: 20px; border: 1px #cecece solid; -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1); box-shadow: 0 1px 10px rgba(0, 0, 0, .1); margin-bottom: 20px; margin-top: 20px; }.table { background: #ffffff; margin-bottom: 0; border-collapse: collapse; border-radius: 3px; }
 .table th, .table td { text-align: center; }
 .table-striped tbody > tr.even > td, .table-striped tbody > tr.even > th { background-color: #F9F9F9; }
 .table-striped tbody > tr.odd > td, .table-striped tbody > tr.odd > th { background-color: #FFF; }
@@ -22,33 +22,41 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
     #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
+    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
     #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
@@ -57,5 +65,6 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
     #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
     #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
 	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
