--- a/web/css/dark.css
+++ b/web/css/dark.css
@@ -23,6 +23,9 @@ tr.odd.expandRow > :hover { background: #000 !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
 #cpu, #memory, #hdd 						{ min-width: 50px; }
 
+@media only screen and (max-width: 1050px) {
+	#connections, tr td:nth-child(10)	{ display:none; visibility:hidden; }
+}
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
