--- a/web/css/light.css
+++ b/web/css/light.css
@@ -18,7 +18,7 @@ body { font-family:"Roboto", sans-serif; background: #ebebeb url('../img/light.p
 tr.even.expandRow > :hover { background: #F9F9F9 !important; }
 tr.odd.expandRow > :hover { background: #FFF !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
-#cpu, #memory, #hdd 						{ min-width: 50px; }
+#cpu, #memory, #hdd 					{ min-width: 50px; }
 
 @media only screen and (max-width: 1050px) {
 	#connections, tr td:nth-child(10)	{ display:none; visibility:hidden; }
@@ -37,8 +37,6 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
 	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
@@ -47,8 +45,6 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
-	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
 	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
@@ -60,9 +56,8 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
-	.content 							{ padding: 0; }
-	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	.content 							{ width:100%; padding: 0; }
+	.announcement						{ width:100%; }
 	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
 	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
